--- a/CodeNameFive/Cell/RestaurantCustomerDetails/Detail/DetailsCell.xib
+++ b/CodeNameFive/Cell/RestaurantCustomerDetails/Detail/DetailsCell.xib
@@ -19,7 +19,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Hardees" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vlD-7w-aY3">
-                        <rect key="frame" x="10" y="5" width="64" height="20.5"/>
+                        <rect key="frame" x="15" y="5" width="64" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -31,28 +31,34 @@
                             <constraint firstAttribute="width" constant="28" id="X9D-rp-i9O"/>
                         </constraints>
                         <state key="normal" image="helpcenter"/>
+                        <connections>
+                            <action selector="HelpWithSender:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="MPl-83-tyd"/>
+                        </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A-44 Block A, North Nazimabad, Karachi" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ebh-XF-wbs">
-                        <rect key="frame" x="10" y="30.5" width="299" height="13.5"/>
+                        <rect key="frame" x="15" y="30.5" width="294" height="13.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" name="secondaryColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RDf-F9-Dlc">
-                        <rect key="frame" x="275" y="5" width="21" height="28"/>
+                        <rect key="frame" x="270" y="5" width="21" height="28"/>
                         <state key="normal" image="call"/>
+                        <connections>
+                            <action selector="callOnNumberButtonPressedWithSender:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="qhu-PS-aKW"/>
+                        </connections>
                     </button>
                 </subviews>
                 <color key="backgroundColor" name="cellColor"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Ebh-XF-wbs" secondAttribute="trailing" constant="20" id="Ct8-pC-gOy"/>
-                    <constraint firstItem="vlD-7w-aY3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="ESf-L5-YQh"/>
+                    <constraint firstItem="vlD-7w-aY3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="ESf-L5-YQh"/>
                     <constraint firstAttribute="trailing" secondItem="RwC-Bl-lYw" secondAttribute="trailing" constant="5" id="GI8-7c-qAD"/>
                     <constraint firstItem="RDf-F9-Dlc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="JK1-hi-P3Y"/>
-                    <constraint firstItem="RwC-Bl-lYw" firstAttribute="leading" secondItem="RDf-F9-Dlc" secondAttribute="trailing" id="JrZ-hs-79m"/>
+                    <constraint firstItem="RwC-Bl-lYw" firstAttribute="leading" secondItem="RDf-F9-Dlc" secondAttribute="trailing" constant="5" id="JrZ-hs-79m"/>
                     <constraint firstItem="RDf-F9-Dlc" firstAttribute="centerY" secondItem="RwC-Bl-lYw" secondAttribute="centerY" id="P0X-ys-H9C"/>
                     <constraint firstItem="Ebh-XF-wbs" firstAttribute="top" secondItem="vlD-7w-aY3" secondAttribute="bottom" constant="5" id="TWm-ZU-pOI"/>
-                    <constraint firstItem="Ebh-XF-wbs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="TqH-kU-dqS"/>
+                    <constraint firstItem="Ebh-XF-wbs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="TqH-kU-dqS"/>
                     <constraint firstItem="RwC-Bl-lYw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="r5T-BQ-d0a"/>
                     <constraint firstItem="vlD-7w-aY3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="wQt-pc-xu5"/>
                 </constraints>
