--- a/CodeNameFive/Cell/RestaurantCustomerDetails/OrderDetail/orderNumber.xib
+++ b/CodeNameFive/Cell/RestaurantCustomerDetails/OrderDetail/orderNumber.xib
@@ -22,37 +22,40 @@
                 <rect key="frame" x="0.0" y="0.0" width="331" height="50"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="button_compass_night.png" translatesAutoresizingMaskIntoConstraints="NO" id="j4L-fr-mDU">
-                        <rect key="frame" x="10" y="5" width="32" height="32"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="32" id="PqD-ro-Cfq"/>
-                            <constraint firstAttribute="height" constant="32" id="yDF-Dp-uFX"/>
-                        </constraints>
-                    </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="0go-eK-Nj0">
-                        <rect key="frame" x="56" y="5" width="79" height="33"/>
+                        <rect key="frame" x="51" y="5" width="79" height="40"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Muhammad Ali" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GCT-Eu-qBb">
-                                <rect key="frame" x="0.0" y="0.0" width="79" height="16.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="79" height="20"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="11"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#7837" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ykt-la-xZu">
-                                <rect key="frame" x="0.0" y="16.5" width="79" height="16.5"/>
+                                <rect key="frame" x="0.0" y="20" width="79" height="20"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GAH-ad-jkK">
+                        <rect key="frame" x="15" y="11" width="28" height="28"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="28" id="8w9-LS-TZD"/>
+                            <constraint firstAttribute="width" constant="28" id="jLM-KR-AEf"/>
+                        </constraints>
+                        <state key="normal" image="unchecked_checkbox"/>
+                        <connections>
+                            <action selector="chechBoxWithSender:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="O3Q-LV-WFf"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="GAH-ad-jkK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="DGc-Vs-ahg"/>
                     <constraint firstItem="0go-eK-Nj0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="JLV-bk-gQU"/>
-                    <constraint firstItem="0go-eK-Nj0" firstAttribute="leading" secondItem="j4L-fr-mDU" secondAttribute="trailing" constant="14" id="MAs-oP-hlZ"/>
-                    <constraint firstItem="j4L-fr-mDU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="OVP-tv-sZJ"/>
-                    <constraint firstItem="j4L-fr-mDU" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="RhR-qJ-Slh"/>
+                    <constraint firstItem="0go-eK-Nj0" firstAttribute="leading" secondItem="GAH-ad-jkK" secondAttribute="trailing" constant="8" symbolic="YES" id="N2M-1Q-Svo"/>
+                    <constraint firstItem="GAH-ad-jkK" firstAttribute="centerY" secondItem="0go-eK-Nj0" secondAttribute="centerY" id="R4s-Iz-dKo"/>
                     <constraint firstAttribute="bottom" secondItem="0go-eK-Nj0" secondAttribute="bottom" constant="5" id="fBO-6Y-DI5"/>
-                    <constraint firstItem="j4L-fr-mDU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="lwG-ho-DVo"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -60,6 +63,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="button_compass_night.png" width="40" height="40"/>
+        <image name="unchecked_checkbox" width="128" height="128"/>
     </resources>
 </document>
